--- a/travis.yml
+++ b/travis.yml
@@ -1,24 +1,13 @@
-sudo: required
-dist: trusty 
 language: php
-php :
-  -7.1.9
 
-branches: 
-  only:
-    - master #->Staging Server
-    - develop  #-> DevServer
-    
-# sebelum melakukan atau eksekusi script
-#install kebutuhan OS. ext: mod-php dll.
-#before_install:
+php:
+  - 7.0
 
-#pre execution
-#testing dll
 before_script:
   - cp .env.travis .env
+  - composer self-update
   - composer install --no-interaction
-  - php artisan key:generate
-#main execution
+
 script:
-- ./vendor/bin/phpunit
+  - php artisan key:generate
+  - vendor/bin/phpunit
